Image quantitization HW

--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -24,30 +24,98 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['go.figure'] in *.ipynb files\n",
+      "Looking for: ['figsize=('] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_ensembles_HW.ipynb\n",
-      "               : go.Figure(data=[go.T| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_A_B_testing_HW.ipynb\n",
+      "               : figsize=(20, 4))\\n\",| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ2.ipynb\n",
+      "               : figsize=(4, 6), dpi=| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_abnormal_data_feature_generating.ipynb\n",
+      "               : figsize=(12,9));\"\n",
+      "  | \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Сlustering_inclass.ipynb\n",
+      "               : figsize=(15, 2))\\n\",| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_LogRegression_SVC_HW.ipynb\n",
+      "               : figsize=(12,10))\\n\",| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ3.ipynb\n",
+      "               : figsize=(4, 6), dpi=| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Feature_engineering_HW.ipynb\n",
+      "               : figsize=(10,8))\\n\",\n",
+      "| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidential_intervals_HW.ipynb\n",
+      "               : figsize=(10, 5))\\n\",| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Data_Visualization_HW.ipynb\n",
+      "               : figsize=(15,12))\\n\",| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_8.ipynb\n",
+      "               : figsize=(10,6))\\n\",\n",
+      "| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_LABa.ipynb\n",
+      "               : figsize=(20,20))\\n\",| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Gradient_descent.ipynb\n",
+      "               : figsize=(10, 6))\\n\",| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Metrics_Regularization_HW.ipynb\n",
-      "               : go.Figure()\\n\",\n",
-      "    | \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/COVID-19_visualization.ipynb\n",
-      "               : go.Figure()\\n\",\n",
-      "    | \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_LossFunc_LinRegrOptimization_HW.ipynb\n",
-      "               : go.Figure(myline)\\n\"| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_CS_videogames_HW.ipynb\n",
-      "               : go.Figure()\\n\",\n",
-      "    | \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_7.ipynb\n",
-      "               : go.Figure(mybar,\\n\",| \n",
+      "               : figsize=(10,8))\\n\",\n",
+      "| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_simpsons_baseline.ipynb\n",
+      "               : figsize=(8, 8), \\\\\\n| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_t_Tests.ipynb\n",
+      "               : figsize=(10, 5))\\n\",| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Clustering_HW.ipynb\n",
+      "               : figsize=(12, 10))\\n\"| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_feature_selection_lection.ipynb\n",
+      "               : figsize=(12,9))\\n\",\n",
+      "| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_ensemble_lection.ipynb\n",
+      "               : figsize=(10, 6), col| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees_lection.ipynb\n",
+      "               : figsize=(8, 8))\\n\",\n",
+      "| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_linear_polynomial_regression.ipynb\n",
+      "               : figsize=(12,9))\\n\",\n",
+      "| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW9.ipynb\n",
+      "               : figsize=(10,6))\\n\",\n",
+      "| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_6.ipynb\n",
+      "               : figsize=(12, 8))\\n\",| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_chaining_PCA_logistic_regression.ipynb\n",
+      "               : figsize=(6, 6))\\n\",\n",
+      "| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_linreg_regularization.ipynb\n",
+      "               : figsize=(10, 7))\\n\",| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_log_regression_SVM.ipynb\n",
+      "               : figsize=(8,8))\\n\",\"p| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Power_Min_sample_size_HW.ipynb\n",
+      "               : figsize=(15,6))\\n\",\n",
+      "| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Outliers_features_generation_HW.ipynb\n",
+      "               : figsize=(10,10), bin| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Case_Power_MinSampleSize_HW.ipynb\n",
+      "               : figsize=(15,6))\\n\",\n",
+      "| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
+      "               : figsize=(20,20))\\n\",| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ.ipynb\n",
-      "               : go.Figure(data=[\\n\",| \n",
+      "               : figsize=(5, 2.7), la| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_DispAnalysis_ABtests.ipynb\n",
+      "               : figsize=(20, 4))\\n\",| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Masterclass.ipynb\n",
+      "               : figsize=(10,15))\\n\",| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/NLP_NaiveBayes_LR_spam_recogn.ipynb\n",
-      "               : go.Figure()\\n\",\"fig.| \n"
+      "               : figsize=(10, 4))\\n\",| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees_HW.ipynb\n",
+      "               : figsize=(3.5,2))\"\n",
+      "  | \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_Capstone.ipynb\n",
+      "               : figsize=(12, 8))\\n\",| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees.ipynb\n",
+      "               : figsize=(8, 8))\\n\",\n",
+      "| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Feature_selection_HW.ipynb\n",
+      "               : figsize=(10, 5),\\n\",| \n"
      ]
     }
    ],
