--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,105 +17,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['figsize=('] in *.ipynb files\n",
+      "Looking for: ['cuda', 'msi'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_A_B_testing_HW.ipynb\n",
-      "               : figsize=(20, 4))\\n\",| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ2.ipynb\n",
-      "               : figsize=(4, 6), dpi=| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_abnormal_data_feature_generating.ipynb\n",
-      "               : figsize=(12,9));\"\n",
-      "  | \n",
+      "               : cuDALFy7M7Nmz8/d///d| MsICAEhGWAAAyQgLACAZ| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_Darwinbooks_recommend.ipynb\n",
+      "               : cuDAAQoVKsTevXsZPnw4| MSIEYwePZorV67w+eef0| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Сlustering_inclass.ipynb\n",
-      "               : figsize=(15, 2))\\n\",| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_LogRegression_SVC_HW.ipynb\n",
-      "               : figsize=(12,10))\\n\",| \n",
+      "               : cuDAGDBgQo0aNijPOOCO| MSiUTs/44+sf87+uQ6Sq| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ3.ipynb\n",
-      "               : figsize=(4, 6), dpi=| \n",
+      "               : cuDAAd7ylreg67pNPrIs| mSicGtiMzOJKeklA/7D8| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Feature_engineering_HW.ipynb\n",
-      "               : figsize=(10,8))\\n\",\n",
-      "| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidential_intervals_HW.ipynb\n",
-      "               : figsize=(10, 5))\\n\",| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Data_Visualization_HW.ipynb\n",
-      "               : figsize=(15,12))\\n\",| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_8.ipynb\n",
-      "               : figsize=(10,6))\\n\",\n",
-      "| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_LABa.ipynb\n",
-      "               : figsize=(20,20))\\n\",| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Gradient_descent.ipynb\n",
-      "               : figsize=(10, 6))\\n\",| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Metrics_Regularization_HW.ipynb\n",
-      "               : figsize=(10,8))\\n\",\n",
-      "| \n",
+      "               : cuDAAdq3b6+sxMTHx2Nh| mSIQEUQfwKhLHA/j0+kI| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_simpsons_baseline.ipynb\n",
-      "               : figsize=(8, 8), \\\\\\n| \n",
+      "               : cuda_output = !ldcon| mSI6aBHoKlQ29KgjtxPt| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_t_Tests.ipynb\n",
-      "               : figsize=(10, 5))\\n\",| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Clustering_HW.ipynb\n",
-      "               : figsize=(12, 10))\\n\"| \n",
+      "               : CuDAROahzxEh6niIAxTP| MSIEcwvgObMmYMJEyZgz| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_feature_selection_lection.ipynb\n",
-      "               : figsize=(12,9))\\n\",\n",
-      "| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_ensemble_lection.ipynb\n",
-      "               : figsize=(10, 6), col| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees_lection.ipynb\n",
-      "               : figsize=(8, 8))\\n\",\n",
-      "| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_linear_polynomial_regression.ipynb\n",
-      "               : figsize=(12,9))\\n\",\n",
-      "| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW9.ipynb\n",
-      "               : figsize=(10,6))\\n\",\n",
-      "| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_6.ipynb\n",
-      "               : figsize=(12, 8))\\n\",| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_chaining_PCA_logistic_regression.ipynb\n",
-      "               : figsize=(6, 6))\\n\",\n",
-      "| \n",
+      "               : CUdACqDYUiD35AOrZPSN| msI66hjoGDuuN4KC3CA+| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Подбор_параметров_и_итоговая_практика(решение).ipynb\n",
+      "               : cuDAQHiAAjfbaZ2nvlxv| msIscJiyifbF6Wgt3pmZ| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidence_Intervals.ipynb\n",
+      "               : cuDAANavj+WGG2zcd18e| MSi8WQSqU4f/684QdDAA| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_linreg_regularization.ipynb\n",
-      "               : figsize=(10, 7))\\n\",| \n",
+      "               : cUdApgCuDbmWZsdOivLl| mSivbRNW5c8nhkpFpni4| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_log_regression_SVM.ipynb\n",
-      "               : figsize=(8,8))\\n\",\"p| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Power_Min_sample_size_HW.ipynb\n",
-      "               : figsize=(15,6))\\n\",\n",
-      "| \n",
+      "               : cuDA2Nnbnzp1vv/02TdP| mSIC4UXN/AZdLlclmtVo| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Outliers_features_generation_HW.ipynb\n",
-      "               : figsize=(10,10), bin| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Case_Power_MinSampleSize_HW.ipynb\n",
-      "               : figsize=(15,6))\\n\",\n",
-      "| \n",
+      "               : cuDA+/PDDGDlyZGzdurV| mSIHn/8cbPDQysw3TMAA| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
-      "               : figsize=(20,20))\\n\",| \n",
+      "               : cUdAm9u3ynuELCo0rm4Q| msi8dz//ULH+XH7nPYV6| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ.ipynb\n",
-      "               : figsize=(5, 2.7), la| \n",
+      "               : cuDA5Z8+ePQU/F8cx9u/| MsioV3tr1DbHIsge6BzH| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_DispAnalysis_ABtests.ipynb\n",
-      "               : figsize=(20, 4))\\n\",| \n",
+      "               : cuDA0Noa+vj9KlS6NHjx| MsICAEhGWAAAyQgLACAZ| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Masterclass.ipynb\n",
-      "               : figsize=(10,15))\\n\",| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/NLP_NaiveBayes_LR_spam_recogn.ipynb\n",
-      "               : figsize=(10, 4))\\n\",| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees_HW.ipynb\n",
-      "               : figsize=(3.5,2))\"\n",
-      "  | \n",
+      "               : cuDAAWzevFliAdpYAoD0| mSIKly4sHJzc1NNmzY1u| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_Capstone.ipynb\n",
-      "               : figsize=(12, 8))\\n\",| \n",
+      "               : cuDAAY28sRDZS6lW0nOu| MSIjIwkJCaF3794cPny4| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees.ipynb\n",
-      "               : figsize=(8, 8))\\n\",\n",
-      "| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Feature_selection_HW.ipynb\n",
-      "               : figsize=(10, 5),\\n\",| \n"
+      "               : cuDAAdNZikWLFlX//v2d| MSiYQFX/zAjv/2uJ0Tlx| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Clustering_algorithms_HW.ipynb\n",
+      "               : cuDaiCEguVVWPBG0dUIz| MSIwpff8mDxpknolGTmI| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/REGEX_practice.ipynb\n",
+      "               : cuDA4MBbinboxHjEucI7| msIVdc/gSrSGj/pJ+3yl| \n"
      ]
     }
    ],
@@ -219,6 +174,7 @@
     "import os\n",
     "\n",
     "def rename_files_in_dir(dir_path):\n",
+    "    '''Rename all files in a directory by removing the prefix \"NETOLOGY_\"'''\n",
     "    for count, filename in enumerate(os.listdir(dir_path)):\n",
     "\n",
     "        # new_filename = filename.replace(\"._\", \"_\")        \n",
@@ -240,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -252,6 +208,7 @@
     }
    ],
    "source": [
+    "# freeze the environment to requirements.txt\n",
     "pip freeze > requirements.txt"
    ]
   }
@@ -272,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4,
   "vscode": {
