--- a/math_sympy.ipynb
+++ b/math_sympy.ipynb
@@ -28,7 +28,19 @@
     "id": "itONN87eais-",
     "outputId": "2c7b0a91-47cb-471d-c3a9-b87cd60e9a8e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sympy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msympy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msp\u001b[39;00m \u001b[39m# SymPy is a Python library for symbolic mathematics. \u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msympy\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msympy\u001b[39;00m \u001b[39mimport\u001b[39;00m Matrix\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sympy'"
+     ]
+    }
+   ],
    "source": [
     "import sympy as sp # SymPy is a Python library for symbolic mathematics. \n",
     "from sympy import *\n",
@@ -840,7 +852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.3"
   },
   "vscode": {
    "interpreter": {
