--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -24,53 +24,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['cuda', 'msi'] in *.ipynb files\n",
+      "Looking for: ['root'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_A_B_testing_HW.ipynb\n",
-      "               : cuDALFy7M7Nmz8/d///d| MsICAEhGWAAAyQgLACAZ| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_abnormal_data_feature_generating.ipynb\n",
+      "               : rooti0aVP86le/KvkV6H| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_Darwinbooks_recommend.ipynb\n",
-      "               : cuDAAQoVKsTevXsZPnw4| MSIEYwePZorV67w+eef0| \n",
+      "               : RooTi7u6upKamqvkeP36| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_HW_funcs_group.ipynb\n",
+      "               : root, dirs, files in| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Сlustering_inclass.ipynb\n",
-      "               : cuDAGDBgQo0aNijPOOCO| MSiUTs/44+sf87+uQ6Sq| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ3.ipynb\n",
-      "               : cuDAAd7ylreg67pNPrIs| mSicGtiMzOJKeklA/7D8| \n",
+      "               : rooTjhoe8xbWx5q1LVFR| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/SEARCH.ipynb\n",
+      "               : root'] in *.ipynb fi| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Feature_engineering_HW.ipynb\n",
-      "               : cuDAAdq3b6+sxMTHx2Nh| mSIQEUQfwKhLHA/j0+kI| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_simpsons_baseline.ipynb\n",
-      "               : cuda_output = !ldcon| mSI6aBHoKlQ29KgjtxPt| \n",
+      "               : ROOTypbVXs17DhrsrCUe| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_JOIN_SQL_HW_.ipynb\n",
+      "               : root, dirs, files in| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Data_Visualization_HW.ipynb\n",
+      "               : root/.cache/pip/whee| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Metrics_Regularization_HW.ipynb\n",
+      "               : rOotXPMhAREelU2vnWxf| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_JOIN_HW.ipynb\n",
+      "               : root, dirs, files in| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_SQL.ipynb\n",
+      "               : root, dirs, files in| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Advanced_Optimization.ipynb\n",
+      "               : rooToBqaIovPXWW1RVVf| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_t_Tests.ipynb\n",
-      "               : CuDAROahzxEh6niIAxTP| MSIEcwvgObMmYMJEyZgz| \n",
+      "               : ROotxMWQrYYUVVggr0bK| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Clustering_HW.ipynb\n",
+      "               : roOTegW1TmAlWLSnF7Z5| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_feature_selection_lection.ipynb\n",
-      "               : CUdACqDYUiD35AOrZPSN| msI66hjoGDuuN4KC3CA+| \n",
+      "               : roOTSRnsMSSO0Tg01rzN| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_FILES_Read_Write_and_pip_JSON.ipynb\n",
+      "               : root, dirs, files in| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_functions_groupby.ipynb\n",
+      "               : root, dirs, files in| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Подбор_параметров_и_итоговая_практика(решение).ipynb\n",
-      "               : cuDAQHiAAjfbaZ2nvlxv| msIscJiyifbF6Wgt3pmZ| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidence_Intervals.ipynb\n",
-      "               : cuDAANavj+WGG2zcd18e| MSi8WQSqU4f/684QdDAA| \n",
+      "               : root root 4096 Apr  | \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_linear_polynomial_regression.ipynb\n",
+      "               : root mean squared er| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/python_open_files.ipynb\n",
+      "               : root, dirs, files in| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_linreg_regularization.ipynb\n",
-      "               : cUdApgCuDbmWZsdOivLl| mSivbRNW5c8nhkpFpni4| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_log_regression_SVM.ipynb\n",
-      "               : cuDA2Nnbnzp1vv/02TdP| mSIC4UXN/AZdLlclmtVo| \n",
+      "               : ROoTBaEgUesD9tmrYeUU| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/bash.ipynb\n",
+      "               : root*)\\n\",\"\\n\",\"\\n\",| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_PIVOT_and_PYMYSTEM.ipynb\n",
+      "               : root, dirs, files in| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Outliers_features_generation_HW.ipynb\n",
-      "               : cuDA+/PDDGDlyZGzdurV| mSIHn/8cbPDQysw3TMAA| \n",
+      "               : rooTFu3LgoKSkp95qxY8| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
-      "               : cUdAm9u3ynuELCo0rm4Q| msi8dz//ULH+XH7nPYV6| \n",
+      "               : roOtTS4DfY0JloanP2fi| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ.ipynb\n",
-      "               : cuDA5Z8+ePQU/F8cx9u/| MsioV3tr1DbHIsge6BzH| \n",
+      "               : rooTrHZmVlhSXOv9J17w| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_DispAnalysis_ABtests.ipynb\n",
-      "               : cuDA0Noa+vj9KlS6NHjx| MsICAEhGWAAAyQgLACAZ| \n",
+      "               : ROOtreh0ImlRUSN6UpLp| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Masterclass.ipynb\n",
-      "               : cuDAAWzevFliAdpYAoD0| mSIKly4sHJzc1NNmzY1u| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_Capstone.ipynb\n",
-      "               : cuDAAY28sRDZS6lW0nOu| MSIjIwkJCaF3794cPny4| \n",
+      "               : RooTvvvFOPPvqoypUrp5| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees_HW.ipynb\n",
+      "               : ROOTypbVXs17DhrsrCUe| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees.ipynb\n",
-      "               : cuDAAdNZikWLFlX//v2d| MSiYQFX/zAjv/2uJ0Tlx| \n",
+      "               : RooTTagF5pWzZsobjV65| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Clustering_algorithms_HW.ipynb\n",
-      "               : cuDaiCEguVVWPBG0dUIz| MSIwpff8mDxpknolGTmI| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/REGEX_practice.ipynb\n",
-      "               : cuDA4MBbinboxHjEucI7| msIVdc/gSrSGj/pJ+3yl| \n"
+      "               : rooTRLNK6m4nl32p1izV| \n"
      ]
     }
    ],
