--- a/math_Numpy_Matrix.ipynb
+++ b/math_Numpy_Matrix.ipynb
@@ -268,6 +268,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.arange(1,6)\n",
+    "print(np.multiply.reduce(x))\n",
+    "print(np.multiply.accumulate(x))\n",
+    "print(np.add.reduce(x))\n",
+    "print(np.add.accumulate(x))\n",
+    "print('*'*30)\n",
+    "print(np.multiply.outer(x,x))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
