--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,80 +17,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['root'] in *.ipynb files\n",
+      "Looking for: ['pd.set_option'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_abnormal_data_feature_generating.ipynb\n",
-      "               : rooti0aVP86le/KvkV6H| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_Darwinbooks_recommend.ipynb\n",
-      "               : RooTi7u6upKamqvkeP36| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_HW_funcs_group.ipynb\n",
-      "               : root, dirs, files in| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Сlustering_inclass.ipynb\n",
-      "               : rooTjhoe8xbWx5q1LVFR| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/SEARCH.ipynb\n",
-      "               : root'] in *.ipynb fi| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Feature_engineering_HW.ipynb\n",
-      "               : ROOTypbVXs17DhrsrCUe| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_linreg_confidence_interval.ipynb\n",
+      "               : pd.set_option('displ| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_JOIN_SQL_HW_.ipynb\n",
-      "               : root, dirs, files in| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Data_Visualization_HW.ipynb\n",
-      "               : root/.cache/pip/whee| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Metrics_Regularization_HW.ipynb\n",
-      "               : rOotXPMhAREelU2vnWxf| \n",
+      "               : pd.set_option('displ| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_JOIN_HW.ipynb\n",
-      "               : root, dirs, files in| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_SQL.ipynb\n",
-      "               : root, dirs, files in| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Advanced_Optimization.ipynb\n",
-      "               : rooToBqaIovPXWW1RVVf| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_t_Tests.ipynb\n",
-      "               : ROotxMWQrYYUVVggr0bK| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Clustering_HW.ipynb\n",
-      "               : roOTegW1TmAlWLSnF7Z5| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_feature_selection_lection.ipynb\n",
-      "               : roOTSRnsMSSO0Tg01rzN| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_FILES_Read_Write_and_pip_JSON.ipynb\n",
-      "               : root, dirs, files in| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_functions_groupby.ipynb\n",
-      "               : root, dirs, files in| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Подбор_параметров_и_итоговая_практика(решение).ipynb\n",
-      "               : root root 4096 Apr  | \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_linear_polynomial_regression.ipynb\n",
-      "               : root mean squared er| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/python_open_files.ipynb\n",
-      "               : root, dirs, files in| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_linreg_regularization.ipynb\n",
-      "               : ROoTBaEgUesD9tmrYeUU| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/bash.ipynb\n",
-      "               : root*)\\n\",\"\\n\",\"\\n\",| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_PIVOT_and_PYMYSTEM.ipynb\n",
-      "               : root, dirs, files in| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Outliers_features_generation_HW.ipynb\n",
-      "               : rooTFu3LgoKSkp95qxY8| \n",
+      "               : pd.set_option('displ| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_Tricks.ipynb\n",
+      "               : pd.set_option('displ| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Housing_in_Germany_p1.ipynb\n",
+      "               : pd.set_option(\\\"disp| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Kaggle_Titanic.ipynb\n",
+      "               : pd.set_option('displ| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_CS_videogames_HW.ipynb\n",
+      "               : pd.set_option('max_c| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Housing_in_Germany_p1_2.ipynb\n",
+      "               : pd.set_option(\\\"disp| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Housing_in_Germany_p2.ipynb\n",
+      "               : pd.set_option(\\\"disp| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
-      "               : roOtTS4DfY0JloanP2fi| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ.ipynb\n",
-      "               : rooTrHZmVlhSXOv9J17w| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_DispAnalysis_ABtests.ipynb\n",
-      "               : ROOtreh0ImlRUSN6UpLp| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Masterclass.ipynb\n",
-      "               : RooTvvvFOPPvqoypUrp5| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees_HW.ipynb\n",
-      "               : ROOTypbVXs17DhrsrCUe| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees.ipynb\n",
-      "               : RooTTagF5pWzZsobjV65| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Clustering_algorithms_HW.ipynb\n",
-      "               : rooTRLNK6m4nl32p1izV| \n"
+      "               : pd.set_option('max_c| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Housing_in_Germany.ipynb\n",
+      "               : pd.set_option('displ| \n"
      ]
     }
    ],
@@ -187,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,6 +172,30 @@
     "\n",
     "# rename all files in current folder\n",
     "rename_files_in_dir( os.getcwd() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "def rename_files_recursively(dir_path):\n",
+    "    '''Recursively rename all files in a directory by removing the prefix \"NETOLOGY_\"'''\n",
+    "    for root, dirs, files in os.walk(dir_path):\n",
+    "        for filename in files:\n",
+    "            # Exclude hidden files and directories\n",
+    "            if not filename.startswith('.'):\n",
+    "                src = os.path.join(root, filename)\n",
+    "                new_filename = filename.replace(\" \", \"_\")\n",
+    "                dst = os.path.join(root, new_filename)\n",
+    "                os.rename(src, dst)\n",
+    "\n",
+    "\n",
+    "# Example usage: recursively rename files in \"path/to/dir\"\n",
+    "rename_files_recursively(os.getcwd())\n"
    ]
   },
   {
