Recommender_systems_HW-2

--- a/RS/RS_ContentBasedRecommendations_HW-1.ipynb
+++ b/RS/RS_ContentBasedRecommendations_HW-1.ipynb
@@ -25,8 +25,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "make_dataset.py, clean.py, build_features.py, train_model.py, predict_model.py и evaluate_model.py"
+    "![](https://miro.medium.com/v2/resize:fit:1400/format:webp/1*fUF83M0uHXwVfSxQ66uZ3g.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
