--- a/Housing_in_Germany_original_parser.ipynb
+++ b/Housing_in_Germany_original_parser.ipynb
@@ -65,6 +65,10 @@
     "\n",
     "\n",
     "def page_save(file_name: str, body: str):\n",
+    "    # with open(file_name, \"w\") as fileToWrite:\n",
+    "    #     fileToWrite.write(body)\n",
+    "    #     print(f\"{len(body)} bytes saved to {file_name}\")\n",
+    "\n",
     "    fileToWrite = open(file_name, \"w\")\n",
     "    fileToWrite.write(body)\n",
     "    fileToWrite.close()\n",
