--- a/Python_Dynamic_Programming.ipynb
+++ b/Python_Dynamic_Programming.ipynb
@@ -14,21 +14,21 @@
    "metadata": {},
    "source": [
     "The problem can be solved using dynamic programming.  \n",
-    "We can define a one-dimensional array `dp` of length `n+1`, where `n` is the largest day in the `days` array.  \n",
-    "Each element `dp[i]` of the array represents the `minimum cost to travel up to day i`. \n",
+    "We can define a one-dimensional array `cost_on_day` of length `last_day+1`, where `last_day` is the largest day in the `days` array.  \n",
+    "Each element `cost_on_day[i]` of the array represents the `minimum cost to travel up to day i`. \n",
     "\n",
-    "We can then iterate over the elements of dp and update them according to the minimum of the following three options:\n",
-    "* Buy a one-day ticket on day i, in which case the cost is dp[i-1] + costs[0].  \n",
-    "* Buy a seven-day ticket that is valid starting from day i-6, in which case the cost is dp[max(0,i-7)] + costs[1].  \n",
-    "* Buy a thirty-day ticket that is valid starting from day i-29, in which case the cost is dp[max(0,i-30)] + costs[2].  \n",
+    "We can then iterate over the elements of `cost_on_day` and update them according to the minimum of the following three options:\n",
+    "* Buy a one-day ticket on day i, in which case the cost is `cost_on_day[i-1] + costs[0]`.  \n",
+    "* Buy a seven-day ticket that is valid starting from day i-7, in which case the cost is `cost_on_day[max(0,i-7)] + costs[1]`.  \n",
+    "* Buy a thirty-day ticket that is valid starting from day i-30, in which case the cost is `cost_on_day[max(0,i-30)] + costs[2]`.  (max(0,i-30) is used to avoid negative indices)\n",
     "\n",
-    "After iterating over the entire dp array, the final minimum cost will be stored in the last element `dp[-1]`.  \n",
+    "After iterating over the entire `cost_on_day` array, the final minimum cost will be stored in the last element `cost_on_day[-1]`.  \n",
     "\n",
     "The idea behind the dynamic programming approach is to build up the solution incrementally,   \n",
     "starting from smaller subproblems and working our way up to larger subproblems.  \n",
     "\n",
     "In this case, we start by considering the minimum cost to travel up to day 1,   \n",
-    "which is simply costs[0] if day 1 is in the days array, or 0 if it is not.  \n",
+    "which is simply `costs[0]` if day 1 is in the days array, or 0 if it is not.  \n",
     "\n",
     "We then consider the minimum cost to travel up to day 2, which can be computed by considering the minimum cost  \n",
     "of buying a one-day ticket on day 2, a seven-day ticket valid from day 1 to day 7, or a thirty-day ticket valid from day 1 to day 30.  \n",
@@ -41,34 +41,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Problem: 983. Minimum Cost For Tickets\n",
+    "# Difficulty: Medium\n",
+    "from typing import Iterable\n",
+    "\n",
+    "\n",
     "class Solution:\n",
-    "    def mincostTickets(self, days, costs):\n",
-    "        \n",
-    "        ticket_duration = [1,7,30]\n",
-    "        r = len(ticket_duration)\n",
-    "        k = max(days) + 1       # last day in days + 1\n",
-    "        dp = [0] * k            #  the minimum cost to travel up to day i. [0, 0, 0, 0 ...]\n",
+    "    def mincostTickets(self, days: Iterable, costs: Iterable, details=False) -> int:\n",
+    "        ticket_duration = [1, 7, 30]\n",
+    "        tickets = len(ticket_duration) # 3\n",
+    "        last_day = (\n",
+    "            max(days) + 1  \n",
+    "        )  # last day in days + 1 to start indexing from 1, 0 as initial state\n",
     "\n",
-    "        travel_days = set(days) # use a set for quick iterating\n",
-    "        for i in range(1, k):   # iterate over dp  elements, actually over all range of days\n",
+    "        #  the minimum cost to travel up to day i. [0, 0, 0, 0 ...]\n",
+    "        cost_on_day = [0] * last_day\n",
+    "        ticket_used = [0] * last_day\n",
     "\n",
+    "        travel_days = set(days)  # use a set to speed up iterating\n",
+    "\n",
+    "        # iterate over 'cost_on_day' elements, actually over all range of days\n",
+    "        for i in range(1, last_day):\n",
     "            if i not in travel_days:\n",
-    "                dp[i] = dp[i-1] # copy previous cost\n",
+    "                # copy previous cost (zero for the first day)\n",
+    "                cost_on_day[i] = cost_on_day[i - 1]\n",
+    "                # ticket_used[i] = ticket_used[i - 1]\n",
+    "            else:  # choose the minima among different variants (tickets)\n",
+    "                cost_options = []\n",
+    "                for j in range(tickets):\n",
+    "                    # clipping index by 0, select cost backwards by ticket duration\n",
+    "                    # and add cost for that ticket\n",
+    "                    cost_options.append(\n",
+    "                        cost_on_day[max(0, i - ticket_duration[j])] + costs[j]\n",
+    "                    )\n",
+    "                min_cost_index = cost_options.index(min(cost_options))\n",
+    "                cost_on_day[i] = min(cost_options)\n",
+    "                \n",
+    "                if details:\n",
+    "                    ticket_used[i] = ticket_duration[min_cost_index]  # Record the index of the used ticket\n",
     "\n",
-    "            else:  # choose the minima among 3 variants\n",
-    "                #       clipping index by 0, select cost backwards by ticket duration and add cost for that ticket\n",
-    "                dp[i] = min( [dp[max(0, i - ticket_duration[ j ]) ]               + costs[ j ] for j in range( r ) ] )\n",
+    "                # cost_on_day[i] = min(\n",
+    "                #     [\n",
+    "                #         cost_on_day[max(0, i - ticket_duration[j])] + costs[j]\n",
+    "                #         for j in range(tickets)\n",
+    "                #     ]\n",
+    "                # )\n",
     "\n",
-    "        return dp[-1]"
+    "        return cost_on_day[-1], ticket_used, cost_on_day"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +105,7 @@
        "44"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,33 +114,99 @@
     "days = [1,4,6,     9,10,11,12,13,14,15,     16,17,18,20,21,22,  23,27,28]    # sum  44\n",
     "costs = [3,13,45]\n",
     "sol = Solution()\n",
-    "sol.mincostTickets(days, costs)"
+    "result, ticket_used, cost_on_day = sol.mincostTickets(days, costs,True)\n",
+    "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'dp' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/qw/qq8zb5hx0w9cgzgkf9_v2sh00000gq/T/ipykernel_6094/1554389507.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'cost'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'days'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdays\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# cost[0, 3, 3, 3, 6, 6, 9, 9, 9, 12, 15, 18, 19, 22, 22, 22, 25, 28, 31, 31, 34, 35, 35, 38, 38, 38, 38, 41, 44]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# days[0, 1, 1, 1, 4, 4, 6, 6, 6,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 18, 20, 21, 22, 23, 23, 23, 23, 27, 28]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dp' is not defined"
+     "data": {
+      "text/plain": [
+       "[0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 7,\n",
+       " 1,\n",
+       " 7,\n",
+       " 7,\n",
+       " 1,\n",
+       " 1,\n",
+       " 1,\n",
+       " 0,\n",
+       " 1,\n",
+       " 7,\n",
+       " 7,\n",
+       " 1,\n",
+       " 0,\n",
+       " 0,\n",
+       " 0,\n",
+       " 1,\n",
+       " 1]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ticket_used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cost_on_day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cost[0, 3, 3, 3, 6, 6, 9, 9, 9, 12, 15, 18, 19, 22, 22, 22, 25, 28, 31, 31, 34, 35, 35, 38, 38, 38, 38, 41, 44]\n",
+      "[1, 4, 6, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 20, 21, 22, 23, 27, 28]\n"
      ]
     }
    ],
    "source": [
-    "print ('cost'+''.join(str(dp)))\n",
-    "print ('days'+''.join(str(temp)))\n",
+    "print ('cost'+''.join(str(cost_on_day)))\n",
+    "# print ('days'+''.join(str(temp)))\n",
     "print (''.join(str(days)))\n",
     "# cost[0, 3, 3, 3, 6, 6, 9, 9, 9, 12, 15, 18, 19, 22, 22, 22, 25, 28, 31, 31, 34, 35, 35, 38, 38, 38, 38, 41, 44]\n",
     "# days[0, 1, 1, 1, 4, 4, 6, 6, 6,  9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 18, 20, 21, 22, 23, 23, 23, 23, 27, 28]\n",
-    "#     [1,          4,    6,        9, 10, 11, 12, 13, 14, 15, 16, 17, 18,     20, 21, 22, 23,             27, 28]"
+    "#     [1,          4,    6,        9, 10, 11, 12, 13, 14, 15, 16, 17, 18,     20, 21, 22, 23,             27, 28]\n"
    ]
   },
   {
@@ -143,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
