HW NLP banki responses

--- a/NLP/NLP_topic_modelling_Аксенова.ipynb
+++ b/NLP/NLP_topic_modelling_Аксенова.ipynb
@@ -526,7 +526,15 @@
         }
       ],
       "source": [
-        "print(\"который\" in stopwords.words(\"russian\"))\n",
+        "print(\"который\" in stopwords.words(\"russian\"))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "# enriching the list of stopwords\n",
         "mystopwords = stopwords.words(\"russian\") + [\n",
         "    \"это\",\n",
@@ -913,21 +921,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# TF-IDF Computation\n",
+        "### $TF(t, d) = \\frac{n_t}{\\sum_{k} n_k} = \\frac{\\text{Number of times term t appears in document d}}{\\text{Total number of terms in document d}} = \\frac{word}{\\sum{words}}$  \n",
+        "$t$ represents a term or `word`,  \n",
+        "and $d$ represents a `specific document`.  \n",
+        "The formula calculates the term frequency of term t in document d. \n",
         "\n",
-        "TF-IDF (Term Frequency-Inverse Document Frequency) is a method for measuring the importance of terms in a document within a corpus. It combines a local component (term frequency) with a global component (inverse document frequency), and normalizes the resulting documents to unit length.\n",
-        "\n",
-        "The formula for the non-normalized weight of term  *\\(i\\)*  in document *\\(j\\)* in a corpus of *\\(D\\)* documents is as follows:\n",
-        "\n",
-        "$$\\text{weight}_{i,j} = \\text{frequency}_{i,j} \\times \\log_2 \\frac{D}{\\text{document\\_freq}_{i}}$$\n",
-        "\n",
-        "or, more generally:\n",
-        "\n",
-        "$$\n",
-        "\\text{weight}_{i,j} = \\text{wlocal}(\\text{frequency}_{i,j}) \\times \\text{wglobal}(\\text{document\\_freq}_{i}, D)\n",
-        "$$\n",
-        "\n",
-        "This allows you to incorporate your own custom *\\(wlocal\\)* and *\\(wglobal\\)* functions for specialized applications.\n"
+        "### $IDF(t, D) = \\log{\\left(\\frac{N_D}{n_{D_t}}\\right)} = \\log{\\left(\\frac{\\text{Total number of documents}}{\\text{Number of documents with term t in it}}\\right)}$\n",
+        "$t$ represents a term or word,  \n",
+        "and $D$ represents a `collection of documents`.  \n",
+        "The formula calculates the inverse document frequency of term t in the collection D. "
       ]
     },
     {
