--- a/NLP/NLP_embeddings_word2vec.ipynb
+++ b/NLP/NLP_embeddings_word2vec.ipynb
@@ -1443,6 +1443,7 @@
    "source": [
     "model = word2vec.Word2Vec.load(model_path) # load model\n",
     "\n",
+    "# clean_sents = Alice in Wonderland sentences\n",
     "model.build_vocab(clean_sents, update=True) # update vocabulary\n",
     "model.train(clean_sents, total_examples=model.corpus_count, epochs=5)   # train model"
    ]
